manifests/monitoring/uptimekuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: uptimekuma
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: uptime.example.com
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: uptimekuma-svc
              port:
                number: 80
